// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`#gremlins/gremlins/text <Gremlin /> With additional props Default value is a string matches the snapshot 1`] = `
<div
  className="MOCK CLASSNAME"
>
  <TextField>
    <input
      accessKey="MOCK ACCESS KEY"
      className="MOCK CLASSNAME"
      defaultValue="MOCK DEFAULT VALUE"
      disabled={true}
      id="MOCK ID"
      name="MOCK NAME"
      onChange={[Function]}
      placeholder="MOCK PLACEHOLDER"
      readOnly={true}
      required={true}
      tabIndex={1}
      type="text"
    />
  </TextField>
</div>
`;

exports[`#gremlins/gremlins/text <Gremlin /> With additional props Value is a string matches the snapshot 1`] = `
<div
  className="MOCK CLASSNAME"
>
  <TextField>
    <input
      accessKey="MOCK ACCESS KEY"
      className="MOCK CLASSNAME"
      disabled={true}
      id="MOCK ID"
      name="MOCK NAME"
      onChange={[Function]}
      placeholder="MOCK PLACEHOLDER"
      readOnly={true}
      required={true}
      tabIndex={1}
      type="text"
      value="MOCK VALUE"
    />
  </TextField>
</div>
`;

exports[`#gremlins/gremlins/text <Gremlin /> With required props matches the snapshot 1`] = `
<div
  className="MOCK CLASSNAME"
>
  <TextField>
    <input
      className="MOCK CLASSNAME"
      disabled={false}
      id="MOCK NAME"
      name="MOCK NAME"
      onChange={[Function]}
      readOnly={false}
      required={false}
      type="text"
      value=""
    />
  </TextField>
</div>
`;
